apps/torrent/prowlarr/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: prowlarr
  name: prowlarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prowlarr
  template:
    metadata:
      labels:
        app: prowlarr
    spec:
      containers:
        - image: lscr.io/linuxserver/prowlarr:1.25.4
          name: prowlarr
          ports:
            - containerPort: 9696
              name: http
          volumeMounts:
            - mountPath: /config
              name: config-volume
      volumes:
        - name: config-volume
          persistentVolumeClaim:
            claimName: prowlarr-config-pvc
