apps/torrent/prowlarr/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prowlarr-service
spec:
  ports:
    - name: http
      port: 9696
      protocol: TCP
      targetPort: http
  selector:
    app: prowlarr
  type: ClusterIP
