apps/torrent/prowlarr/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/auth-signin: https://oauth2.sarapuce.fr/oauth2/start?rd=https://$host$request_uri
    nginx.ingress.kubernetes.io/auth-url: http://oauth2-proxy.nginx.svc.cluster.local/oauth2/auth
  name: prowlarr-web
spec:
  ingressClassName: public
  rules:
  - host: prowlarr.sarapuce.fr
    http:
      paths:
      - backend:
          service:
            name: prowlarr-service
            port:
              number: 9696
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - prowlarr.sarapuce.fr
    secretName: tls-secret
